# taxrep

./: .gitattributes  .gitignore  ARTIFACT_INVENTORY.json  CITATION.cff  GITHUB_DIRECTORY_VERIFICATION.json  MANIFEST.sha256  PUBLIC_REDACTION_PROVENANCE.json  README.md  SOURCE_SNAPSHOT.json  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: main.yaml  models.yaml  pilot.yaml  robustness.yaml  technical_pretest.yaml  train_selection.yaml
experiment/: freeze_manifest.json  model_registry.csv  prompt_hashes.json  prompt_registry.yaml  provider_catalog_snapshot_20260704.json  provider_catalog_snapshot_20260707.json  provider_catalog_snapshot_20260711.json  provider_catalog_snapshot_20260712_targeted_recovery.json  provider_health_20260704.json  provider_health_20260712.json  provider_health_20260712_targeted_recovery.json  provider_health_probe_20260704.json  provider_kimi_probe_20260704.json  provider_kimi_seed_probe_20260704.json  provider_kimi_system_probe_20260704.json  provider_limits_snapshot_20260704.md  provider_limits_snapshot_20260707.md  provider_limits_snapshot_20260711.md  provider_replacement_health_20260707.json  provider_snapshot_summary_20260704.json  provider_snapshot_summary_20260707.json  provider_snapshot_summary_20260711.json  provider_token_budget_probe_20260704.json  targeted_t3_repeat_extension.md  targeted_t3_repeat_extension.yaml  targeted_t3_repeat_extension_hashes.json  targeted_t3_repeat_recovery.md  targeted_t3_repeat_recovery.yaml  targeted_t3_repeat_recovery_hashes.json  targeted_t3_repeat_sample.json  taxonomy_equivalence_matrix.md
(+215 files in other folders)
